a fix (bug #2361: ALTER TABLE ... DROP PRIMARY KEY drops a non-primary key).